--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="index.js"></script>
-    <title>Play PING</title>
+    <title>Play Ping</title>
   </head>
   <body>
-      <h1 class="heading">Play PING</h1>
-      <canvas id="gameCanvas" width="800" height="600">
-      </canvas>
+    <div class="headerSection">
+      <img src="strawberry.png" alt="Strawberry logo" id="logo"/>
+      <h1 class="heading">Play Ping</h1>
+      <img src="strawberry.png" alt="Strawberry logo" id="logo"/>
+    </div>
+      <div class="main">
+        <canvas id="gameCanvas" width="800" height="600">
+        </canvas>
+      </div>
   </body>
 </html>
