--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <h1 class="heading">Play Ping</h1>
       <img src="strawberry.png" alt="Strawberry logo" id="logo"/>
     </div>
+    <div class=level>
+      <div class="easyLevel">Easy</div>
+      <div class="intermediateLevel">Intermediate</div>
+      <div class="difficultLevel">Difficult</div>
+    </div>
       <div class="main">
         <canvas id="gameCanvas" width="800" height="600">
         </canvas>
