added media query for mobile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="heading">Play Ping</h1>
       <img src="strawberry.png" alt="Strawberry logo" id="logo"/>
     </div>
+    <div id="fullSizeMessage">This game requires a mouse to play, and a screen width larger than 480px. Please log in to your computer to play.</div>
     <div class=level>
       <div class="easyLevel">Easy</div>
       <div class="intermediateLevel">Intermediate</div>
